tests/ui/skip/duplicate_setters_3.stderr
error: encountered duplicate `#[skip]` attribute for field
 --> tests/ui/skip/duplicate_setters_3.rs:5:24
  |
5 |     #[skip(setters)] #[skip]
  |                        ^^^^

error: duplicate `#[skip]` here
 --> tests/ui/skip/duplicate_setters_3.rs:5:7
  |
5 |     #[skip(setters)] #[skip]
  |       ^^^^
